[package]
name = "bevy_streamdeck"
version = "0.1.0"
edition = "2021"
authors = ["François Mockers <mockersf@gmail.com>"]
description = "Elgato Stream Deck plugin for Bevy"
repository = "https://github.com/vleue/bevy_streamdeck"
homepage = "https://github.com/vleue/bevy_streamdeck"
documentation = "https://docs.rs/bevy_streamdeck"
keywords = ["bevy", "streamdeck"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = [ "color_compatibility", "image_compatibility" ]
color_compatibility = [ "bevy/bevy_render" ]
image_compatibility = [ "bevy/bevy_render", "images" ]
images = [ "image" ]
assets = [ "bevy/bevy_asset" ]

[dependencies]
bevy = { version = "0.8.0-dev", git = "https://github.com/bevyengine/bevy", default-features = false }
streamdeck = { version = "0.6", default-features = false }
crossbeam-channel = "0.5"
image = { version = "0.23", optional = true }

[dev-dependencies]
rand = "0.8"
reqwest = {version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }

[[example]]
name = "image"
required-features = ["assets"]

[[example]]
name = "animated"
required-features = ["assets"]

[[example]]
name = "demo"
required-features = ["assets"]
