[package]
name = "bevy_streamdeck"
version = "0.4.0-rc.4"
edition = "2021"
authors = ["François Mockers <francois.mockers@vleue.com>"]
description = "Elgato Stream Deck plugin for Bevy"
repository = "https://github.com/vleue/bevy_streamdeck"
homepage = "https://github.com/vleue/bevy_streamdeck"
documentation = "https://docs.rs/bevy_streamdeck"
keywords = ["bevy", "streamdeck"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = ["color_compatibility", "image_compatibility", "assets"]
color_compatibility = ["bevy/bevy_color"]
image_compatibility = ["bevy/bevy_render", "bevy/png", "images"]
images = ["image"]
assets = ["bevy/bevy_asset"]

[dependencies.bevy]
version = "0.14.0"
default-features = false
features = ["multi_threaded"]

[dependencies]
streamdeck = { version = "0.9", default-features = false }
crossbeam-channel = "0.5"
image = { version = "0.25", optional = true }

[dev-dependencies]
rand = "0.8"

[[example]]
name = "image"

[[example]]
name = "animated"

[[example]]
name = "demo"
