[package]
name = "bevy_streamdeck"
version = "0.6.0-rc.1"
edition = "2021"
authors = ["François Mockers <francois.mockers@vleue.com>"]
description = "Elgato Stream Deck plugin for Bevy"
repository = "https://github.com/vleue/bevy_streamdeck"
homepage = "https://github.com/vleue/bevy_streamdeck"
documentation = "https://docs.rs/bevy_streamdeck"
keywords = ["bevy", "streamdeck"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = ["image_compatibility", "assets"]
image_compatibility = [
    "dep:bevy_render",
    "dep:bevy_image",
    "bevy_image/png",
    "images",
]
images = ["dep:image"]
assets = ["dep:bevy_asset"]

# [dependencies.bevy]
# version = "0.15.0"
# default-features = false
# features = ["multi_threaded"]

[dependencies]
bevy_ecs = { version = "0.16.0-rc.3", default-features = false }
bevy_app = { version = "0.16.0-rc.3", default-features = false }
bevy_input = { version = "0.16.0-rc.3", default-features = false }
bevy_tasks = { version = "0.16.0-rc.3", default-features = false }
bevy_color = { version = "0.16.0-rc.3", default-features = false }
bevy_math = { version = "0.16.0-rc.3" }
bevy_render = { version = "0.16.0-rc.3", default-features = false, optional = true }
bevy_asset = { version = "0.16.0-rc.3", default-features = false, optional = true }
bevy_image = { version = "0.16.0-rc.3", default-features = false, optional = true }
streamdeck = { version = "0.9", default-features = false }
crossbeam-channel = "0.5"
image = { version = "0.25", optional = true }
log = "0.4"
glam = { version = "0.29" }

[dev-dependencies]
rand = "0.8"

[[example]]
name = "image"

[[example]]
name = "animated"

[[example]]
name = "demo"
